fix for title overlap with sidebar

--- a/styles/_layout_node_form.scss
+++ b/styles/_layout_node_form.scss
@@ -29,6 +29,8 @@
     }
   }
 
+  .block-page-title-block,
+  .block-local-tasks-block,
   .messages-list,
   .layout-region-node-main {
     padding-right: 0;
